--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
 <body>
 <h1>BEM VINDO AO MENU INICIAL</h1>
-<p>Exercicios propostos em aula</p>
+<p>Autor(a): Larissa Ozorio</p>
 
 <p>	Isso é um teste apenas<br>
     <a href="site.html"
         target="_blank">
         clique aqui
     </a>
+
+    <p>	Portifolio<br>
+        <a href="portifolio.html"
+            target="_blank">
+            clique aqui
+        </a>
 </p>
 </body>
 </html>
