--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html> 
+    <style>
+        
+    </style>
 <body>
 <h1>BEM VINDO AO MENU INICIAL</h1>
 <p>Autor(a): Larissa Ozorio</p>
