--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html> 
     <style>
-        
+         body {
+            font-family: Helvetica, sans-serif;
+            line-height: 1.6;
+            text-align: center;
+            margin: 0 auto;
+            max-width: 800px;
+            padding: 20px;
+            background-color: brown;
+         }
     </style>
 <body>
 <h1>BEM VINDO AO MENU INICIAL</h1>
