--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <style>
          body {
             font-family: Helvetica, sans-serif;
+            text-decoration-color: antiquewhite;
             line-height: 1.6;
             text-align: center;
             margin: 0 auto;
