--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             margin: 0 auto;
             max-width: 800px;
             padding: 20px;
-            background-color: brown;
+            background-color: rgb(0, 0, 0);
          }
     </style>
+
 <body>
 <h1>BEM VINDO AO MENU INICIAL</h1>
 <p>Autor(a): Larissa Ozorio</p>
