--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
-<html> 
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bem vindo(a) a minha página!</title>
     <style>
-         body {
-            font-family: Helvetica, sans-serif;
-            font-style: antiquewhite;
-            line-height: 1.6;
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url('https://static.vecteezy.com/ti/fotos-gratis/p2/17390565-fundo-preto-design-de-plano-de-fundo-elemento-de-design-gratis-foto.jpeg'); /* Substitua 'seu-fundo.jpg' pelo caminho da sua imagem de fundo */
+            background-size: cover;
+            font-family: 'Arial', sans-serif;
+        }
+
+        header {
+            background-color: #333; /* Cor chumbo */
+            padding: 15px;
             text-align: center;
-            margin: 0 auto;
-            max-width: 800px;
-            padding: 20px;
-            background-color: rgb(0, 0, 0);
-         }
+            color: #fff; /* Cor branca */
+        }
+
+        nav {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #ff6600; /* Cor laranja */
+        }
     </style>
-
+</head>
 <body>
-<h1>BEM VINDO AO MENU INICIAL</h1>
-<p>Autor(a): Larissa Ozorio</p>
 
-<p>	Isso é um teste apenas<br>
-    <a href="site.html"
-        target="_blank">
-        clique aqui
-    </a>
+    <header>
+        <h1>Currículo</h1>
+    </header>
 
-    <p>	Portifolio<br>
-        <a href="portifolio.html"
-            target="_blank">
-            clique aqui
-        </a>
+    <nav>
+        <a href="curriculo.html">Curriculo</a>
+        <!-- Adicione mais botões conforme necessário -->
+    </nav>
 
-
-        <p>	IFSP - DW1 - Professor Eder Pansani<br>
-            <a href="ifspdw1.html"
-                target="_blank">
-                clique aqui
-            </a>
-</p>
 </body>
 </html>
