--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem vindo(a) a minha página!</title>
+    <title>Larissa Ozorio</title>
     <style>
         body {
             margin: 0;
@@ -42,13 +42,20 @@
 <body>
 
     <header>
-        <h1>Currículo</h1>
+        <h1>Bem vindo(a) a minha página!</h1>
     </header>
 
     <nav>
         <a href="curriculo.html">Curriculo</a>
         <!-- Adicione mais botões conforme necessário -->
     </nav>
-
+    <nav>
+        <a href="ifspdw2.html">IFSP - Exercícios </a>
+        <!-- Adicione mais botões conforme necessário -->
+    </nav>
+    <nav>
+        <a href="portifolio.html">Portifólio</a>
+        <!-- Adicione mais botões conforme necessário -->
+    </nav>
 </body>
 </html>
