--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
         <a href="portifolio.html">Portifólio</a>
         <!-- Adicione mais botões conforme necessário -->
     </nav>
+    <nav>
+        <a href="utilitarios.html">Utilitários</a>
+        <!-- Adicione mais botões conforme necessário -->
+    </nav>
 </body>
 </html>
