--- a/portifolio.html
+++ b/portifolio.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>portiolio</h1>
-<p>Autor(a): Larissa Ozorio</p>
-<p>Autor(a): Larissa Ozorio</p>
-<p>Autor(a): Larissa Ozorio</p>
-<p>Autor(a): Larissa Ozorio</p>
-<p>Autor(a): Larissa Ozorio</p>
-<p>Autor(a): Larissa Ozorio</p>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+        }
 
+        header {
+            background-color: #333;
+            padding: 15px;
+            text-align: center;
+            color: #fff;
+        }
+
+        section {
+            margin: 20px;
+        }
+
+        h2 {
+            color: #333; /* Cor chumbo */
+        }
+
+        p {
+            color: #555;
+        }
+
+        .project {
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 15px;
+            margin-bottom: 20px;
+        }
+
+        .project img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Meu Portfólio</h1>
+    </header>
+
+    <section class="project">
+        <h2>Projeto 1</h2>
+        <img src="projeto1.jpg" alt="Projeto 1"> <!-- Substitua 'projeto1.jpg' pelo caminho da imagem do seu projeto -->
+        <p>Descrição do Projeto 1.</p>
+    </section>
+
+    <section class="project">
+        <h2>Projeto 2</h2>
+        <img src="projeto2.jpg" alt="Projeto 2"> <!-- Substitua 'projeto2.jpg' pelo caminho da imagem do seu projeto -->
+        <p>Descrição do Projeto 2.</p>
+    </section>
+
+    <!-- Adicione mais projetos conforme necessário -->
 
 </body>
 </html>
