--- a/ifspdw2.html
+++ b/ifspdw2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>DW1</h1>
+<body style="text-align: center;">
+<h1>DW2</h1>
 <p>Autor(a): Larissa Ozorio</p>
 <p><a href="inicio.html">Aula 20022024</a></p>
 
