--- a/FormularioTabela.html
+++ b/FormularioTabela.html
@@ -9,7 +9,7 @@
 <body>
     <div class="menu">
         <a href="inicio.html">Início</a>
-        <a href="busca.html">Busca</a>
+        <a href="Busca.html">Busca</a>
         <a href="FormularioTabela.html">Formulário/Tabela</a>
         <a href="PostagemComImagem.html">Postagem c/ Imagem</a>
     </div>
