--- a/20022024/inicio.html
+++ b/20022024/inicio.html
@@ -9,7 +9,7 @@
 <body>
   <div class="menu">
     <a href="inicio.html">Início</a>
-    <a href="Busca.html">Busca</a>
+    <a href="Busca.html">Busca Aqui</a>
     <a href="FormularioTabela.html">Formulário/Tabela</a>
     <a href="PostagemComImagem.html">Postagem c/ Imagem</a>
 </div>
