--- a/ifspdw2.html
+++ b/ifspdw2.html
@@ -3,7 +3,7 @@
 <body style="text-align: center;">
 <h1>DW2</h1>
 <p>Autor(a): Larissa Ozorio</p>
-<p><a href="/20022024/inicio.html">Aula 20022024</a></p>
+<p><a href="../20022024/inicio.html">Aula 20022024</a></p>
 
 
 </body>
