--- a/curriculo.html
+++ b/curriculo.html
@@ -34,14 +34,14 @@
 <body>
 
     <header>
-        <h1>Larissa Santos Ozorio</h1>
+        <h1>Larissa Ozorio</h1>
     </header>
 
     <section>
         <h2>Dados Pessoais</h2>
-        <p>Nome: Larissa Santos Ozorio</p>
+        <p>Nome: Larissa Ozorio</p>
         <p>Email: seu@email.com</p>
-        <p>Telefone: (12) 3456-7890</p>
+        <p>Telefone: (17) 9999-9999</p>
     </section>
 
     <section>
