--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         nav {
             text-align: center;
-            margin-top: 50px;
+            margin-top: 20px;
         }
 
         nav a {
@@ -32,10 +32,40 @@
             margin: 0 10px;
             border-radius: 5px;
             transition: background-color 0.3s;
+            background-color: #777; /* Cor cinza */
         }
 
         nav a:hover {
             background-color: #ff6600; /* Cor laranja */
+        }
+
+        .biografia-container {
+            display: grid;
+            align-items: center;
+            justify-content: space-between;
+            margin: 50px;
+            padding: 10px;
+        }
+
+        .biografia-texto {
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo branco com transparência */
+            border-radius: 10px;
+            padding: 20px;
+            max-width: 300px;
+        }
+
+        .biografia-foto {
+            width: 150px;
+            height: 150px;
+            border: 5px solid #ff6600; /* Cor laranja */
+            border-radius: 50%;
+            overflow: hidden;
+        }
+
+        .biografia-foto img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
 </head>
@@ -46,20 +76,23 @@
     </header>
 
     <nav>
-        <a href="curriculo.html">Curriculo</a>
-        <!-- Adicione mais botões conforme necessário -->
-    </nav>
-    <nav>
-        <a href="ifspdw2.html">IFSP - Exercícios </a>
-        <!-- Adicione mais botões conforme necessário -->
-    </nav>
-    <nav>
-        <a href="portifolio.html">Portifólio</a>
-        <!-- Adicione mais botões conforme necessário -->
-    </nav>
-    <nav>
+        <a href="curriculo.html">Currículo</a>
+        <a href="ifspdw2.html">IFSP - Exercícios</a>
+        <a href="portifolio.html">Portfólio</a>
         <a href="utilitarios.html">Utilitários</a>
-        <!-- Adicione mais botões conforme necessário -->
     </nav>
+
+    <div class="biografia-container">
+
+        <div class="biografia-foto">
+            <img src="https://media.licdn.com/dms/image/D4D03AQHfm79m8f-a1g/profile-displayphoto-shrink_200_200/0/1705164455790?e=2147483647&v=beta&t=THuVELiYD-XoY3-M3Ht4sYXBp7sLorfRZHJHuZ3ca-Q" alt="Foto de Perfil">
+        </div>
+        <div class="biografia-texto">
+            <h2>Biografia</h2>
+            <p>Oie! Tudo bem? Meu nome é Larissa. Estou criando essa página para colocar meus trabalhos e demais dados. Está página está em construção no momento.</p>
+        </div>
+       
+    </div>
+
 </body>
 </html>
