--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="https://imgur.com/cmnuGcL" alt="Logo Mango" class="logo">
+        <img src="https://i.imgur.com/cmnuGcL.png" alt="Logo Mango" class="logo">
         <ul>
             <li><a href="#">Início</a></li>
             <li><a href="#">Portfólio</a></li>
