--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="portfolio.html">Portfólio</a></li>
             <li><a href="https://wa.me/5517996806782" target="_blank">Contato</a></li>
-            <!-- Marketing Flash será adicionado após login via JavaScript -->
+            <li><a href="mapapublicidade.html" target="_blank">Contato</a></li>
         </ul>
         <a href="#" class="login-btn" id="loginStatus">Login</a>
     </nav>
